--- a/.github/workflows/firstcitest.yaml
+++ b/.github/workflows/firstcitest.yaml
@@ -3,7 +3,7 @@ name: GitHub Actions Demo
 on: [ push ]
 jobs:
   Test:
-    runs-on: windows
+    runs-on: windows-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: python main.py
