--- a/.github/workflows/mergeci.yaml
+++ b/.github/workflows/mergeci.yaml
@@ -1,10 +1,13 @@
 
 
 name: Merge CI
-on: [ pull-request ]
+on: [ pull_request ]
 jobs:
   Test:
-    runs-on: [ windows-latest, ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    strategy: 
+      matrix:
+        os: [ windows-latest, ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
