--- a/.github/workflows/firstcitest.yaml
+++ b/.github/workflows/firstcitest.yaml
@@ -1,10 +1,10 @@
 
-name: GitHub Actions Demo
-on: [ push ]
+name: Git Actions Demo
+on: [push]
 jobs:
-  Test:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: python main.py
+ Explore-GitHub-Actions:
+   runs-on: windows-latest
+   steps:
+     - uses: actions/checkout@v2
+     - run: echo "The job was automatically triggered by a ${{ github.event_name }} event"
+     - run: python main.py
